--- a/gradle.properties
+++ b/gradle.properties
@@ -19,16 +19,13 @@
 
 VERSION_NAME=1.1.3
 VERSION_CODE=10
-PACKAGE_NAME=com.dd.sample.progressbutton
-GROUP=com.github.dmytrodanylyk.circular-progress-button
+PACKAGE_NAME=com.dd.progressbutton
+GROUP=com.github.ceabie.circular-progress-button
 
 POM_DESCRIPTION=Android Button which can morph to Circular Progress
-POM_URL=https://github.com/dmytrodanylyk/circular-progress-button
-POM_SCM_URL=https://github.com/dmytrodanylyk/circular-progress-button
-POM_SCM_CONNECTION=scm:git@github.com:dmytrodanylyk/circular-progress-button.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:dmytrodanylyk/circular-progress-button.git
-POM_LICENCE_NAME=The MIT License (MIT)
-POM_LICENCE_URL=https://github.com/dmytrodanylyk/acircular-progress-button/blob/master/LICENSE.md
-POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=dmytrodanylyk
-POM_DEVELOPER_NAME=Dmytro Danylyk
+POM_URL=https://github.com/ceabie/circular-progress-button
+POM_SCM_CONNECTION=https://github.com/ceabie/circular-progress-button.git
+ISSUE_TRACKER_URL=https://github.com/ceabie/circular-progress-button/issues
+
+bintrayUser=
+bintrayApiKey=
