--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,5 +22,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
+//    compile project(':library')
+    compile 'com.github.ceabie.circular-progress-button:library:1.1.3@aar'
 }
